--- a/altX/debian/changelog
+++ b/altX/debian/changelog
@@ -1,6 +1,6 @@
-stackless (2.5.2) unstable; urgency=low
+canvasx (0.1.0) unstable; urgency=low
 
   * Initial release 
 
- -- Jayesh Salvi <jayesh@altfrequency.com>  Sat, 22 May 2008 17:34:43 +0300
+ -- Jayesh Salvi <jayesh@altfrequency.com>  Sat, 31 May 2007 17:34:43 +0300
 
