--- a/libaltsvg/debian/changelog
+++ b/libaltsvg/debian/changelog
@@ -1,3 +1,11 @@
+libaltsvg (0.1.1) unstable; urgency=low
+
+  * Fixes some memory leaks
+  * The autotools files have been changed to create bare minimum libaltsvg, so
+    that no files conflict with original librsvg installations.
+
+ -- Jayesh Salvi <jayesh@altfrequency.com>  Sun, 2 Nov 2008 17:34:43 +0300
+
 libaltsvg (0.1.0) unstable; urgency=low
 
   * Dynamic text node manipulation
